fix on mobile

--- a/index.css
+++ b/index.css
@@ -437,6 +437,7 @@
   font-weight: 300;
   max-width: 1760px;
   width: 100%;
+  position: relative;
 }
 
 .contact__contacts-block {
@@ -459,7 +460,6 @@
           flex: 0 0 66.667%;
   background-color: #2b2b2b;
   color: #fff;
-  position: relative;
   padding: 90px 0 110px 150px;
 }
 
@@ -469,9 +469,9 @@
   background: #2b2b2b;
   content: "";
   top: 0;
-  left: 0;
+  left: 50%;
   height: 100%;
-  width: 100vw;
+  width: 50vw;
   z-index: -1;
 }
 
@@ -679,6 +679,7 @@
   width: 100%;
   max-width: 1760px;
   background-color: #f5f5f5;
+  position: relative;
 }
 
 .footer__left-block,
@@ -718,7 +719,6 @@
       -ms-flex-align: center;
           align-items: center;
   padding-left: 170px;
-  position: relative;
 }
 
 .footer__right-block::after {
@@ -727,9 +727,9 @@
   background: #181818;
   content: "";
   top: 0;
-  left: 0;
+  left: 50%;
   height: 100%;
-  width: 100vw;
+  width: 50vw;
   z-index: -1;
 }
 
